Refactor footer section in index.html for clarity

--- a/index.html
+++ b/index.html
@@ -748,11 +748,9 @@
         </div>
       </div>
     </div>
-  </footer>
-
+  </footer><!-- /Footer -->
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
   <!-- Vendor JS Files -->
   <script src="assets/vendor/email-form/validate.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
