Update project and blog links in index.html

--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
             </div><!-- End Portfolio Item -->
           </div><!-- End Portfolio Container -->
           <div class="text-center" id="blog">
-              <a href="https://rajtilak-2020.github.io/portfolio-project-gallery/" class="btn btn-primary mt-4">
+              <a href="https://krajtilak-portfolio-gallery.vercel.app/" class="btn btn-primary mt-4">
                 <i class="bi bi-cpu"></i> Click Here To View All Of My Projects
               </a>
             </div>
@@ -474,7 +474,7 @@
               is not just a showcase of my work but also a medium to connect, inform, and spark ideas within a broader community. Join me on
                this journey as I explore, innovate, and share experiences that matter.
           </p>
-          <a href="https://rajtilak-2020.github.io/Personal-Blog/" class="btn btn-primary mt-4">
+          <a href="https://krajtilak-blog.vercel.app/" class="btn btn-primary mt-4">
             <i class="bi bi-journal-richtext"></i> Visit Blog Section
           </a>
         </div>
