--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 </head>
 <body class="index-page">
   <!-- Preloader -->
-<div id="preloader">
+<!-- <div id="preloader">
   <div class="preloader-container">
       <div class="preloader-pulse-circle"></div>
-      <div class="preloader-glitch-text" data-text="Loading...">Loading...</div>
-</div>
+      <div class="preloader-glitch-text" data-text="Loading...">Loading...</div> 
+</div>-->
 
   </div>
   <header id="header" class="header d-flex flex-column justify-content-center">
@@ -692,7 +692,7 @@
 
   </main>
 
-  <script>
+  <!-- <script>
     function scrambleText() {
       const text = document.querySelector('.preloader-glitch-text');
       const originalText = text.innerText;
@@ -730,7 +730,7 @@
           }, 500);
       });
   });
-    </script>
+    </script> -->
     
   <footer id="footer" class="footer position-relative light-background">
       <div class="social-links d-flex justify-content-center">
