Update meta description and add Open Graph image for improved SEO and sharing

--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!--Meta Info-->
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>K Rajtilak's Portfolio</title>
-  <meta content="A dynamic and interactive portfolio showcasing expertise in web development,
-   robotics, IoT, and more. Built to reflect creativity and technical proficiency, it highlights
-    projects and skills, offering visitors an immersive experience." name="description">
+  <meta content="Discover K Rajtilak's portfolio, featuring innovative projects, creative work, and a commitment to technology and design excellence." name="description">
   <meta content="K Rajtilak" name="Author">
+  <meta property="og:image" content="/assets/img/favicon.ico">
+  <!--Meta Info Ends-->
   <!-- Favicons -->
   <link href="/assets/img/favicon.ico" rel="icon" type="image/x-icon"><!--Animated Favicon-->
   <link href="data:image/x-icon;base64,AAABAAEAEBAQAAEABAAoAQAAFgAAACgAAAAQAAAAIAAAAAEABAAAAAAAgAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAACQkJAP
