Update title and Open Graph meta tags for enhanced branding and SEO

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
   <!--Meta Info-->
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>K Rajtilak's Portfolio</title>
+  <title>K Rajtilak's Website</title>
   <meta content="Discover K Rajtilak's portfolio, featuring innovative projects, creative work, and a commitment to technology and design excellence." name="description">
   <meta content="K Rajtilak" name="Author">
   <meta property="og:image" content="/assets/img/favicon.ico">
+  <meta property="og:site_name" content="K Rajtilak's Website">
+  <meta property="og:title" content="K Rajtilak's Website">
+  <meta property="og:description" content="Discover K Rajtilak's portfolio, featuring innovative projects, creative work, and a commitment to technology and design excellence.">
+  <meta property="og:url" content="https://krajtilak.vercel.app/">
   <!--Meta Info Ends-->
   <!-- Favicons -->
   <link href="/assets/img/favicon.ico" rel="icon" type="image/x-icon"><!--Animated Favicon-->
