Add Twitter meta tags and update Open Graph image for enhanced sharing

--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
   <title>K Rajtilak's Website</title>
   <meta content="Discover K Rajtilak's portfolio, featuring innovative projects, creative work, and a commitment to technology and design excellence." name="description">
   <meta content="K Rajtilak" name="Author">
-  <meta property="og:image" content="/assets/img/favicon.ico">
   <meta property="og:site_name" content="K Rajtilak's Website">
   <meta property="og:title" content="K Rajtilak's Website">
   <meta property="og:description" content="Discover K Rajtilak's portfolio, featuring innovative projects, creative work, and a commitment to technology and design excellence.">
   <meta property="og:url" content="https://krajtilak.vercel.app/">
+  <meta property="twitter:title" content="K Rajtilak - Portfolio Website">
+  <meta property="twitter:description" content="Explore my portfolio featuring innovative projects, creative work, and a passion for technology and design excellence.">
+  <meta property="og:image" content="/assets/img/krajtilak-banner.png">
+  <meta property="twitter:image" content="/assets/img/krajtilak-banner.png">
+  <meta property="twitter:card" content="/assets/img/about.webp">
   <!--Meta Info Ends-->
   <!-- Favicons -->
   <link href="/assets/img/favicon.ico" rel="icon" type="image/x-icon"><!--Animated Favicon-->
