--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 <div id="preloader">
   <div class="preloader-container">
       <div class="preloader-pulse-circle"></div>
-      <div class="preloader-glitch-text" data-text="Loading...">Loading...</div> 
-</div>
+      <div class="preloader-glitch-text" data-text="Loading...">Loading...</div>
+</div>+
   </div>
   <header id="header" class="header d-flex flex-column justify-content-center">
     <i class="header-toggle d-xl-none bi bi-list"></i>
@@ -675,7 +675,7 @@
           </div>
           
           <div class="col-lg-8">
-            <form action="https://formspree.io/f/mgvedwbv" method="post" class="php-email-form">
+            <form action="https://formspree.io/f/mgvedwbv" method="post" class="email-form">
               <div class="row gy-4">
                 <div class="col-md-6">
                   <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
@@ -691,7 +691,7 @@
                 </div>
                 <div class="col-md-12 text-center">
                   <div class="loading">Loading</div>
-                  <div class="error-message"></div>
+                  <div class="error-message">There was an error sending your message. Please try again later.</div>
                   <div class="sent-message">Your message has been sent. Thank you!</div>
                   <button type="submit">Send Message</button>
                 </div>
