Refactor CSS variables and add animations for hero section elements

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <div class="preloader-container">
       <div class="preloader-pulse-circle"></div>
       <div class="preloader-glitch-text" data-text="Loading...">Loading...</div>
-</div>+
+</div>
   </div>
   <header id="header" class="header d-flex flex-column justify-content-center">
     <i class="header-toggle d-xl-none bi bi-list"></i>
