--- a/index.html
+++ b/index.html
@@ -134,50 +134,50 @@
       </div>
     </section><!-- /About Section -->
 
-    <!-- Stats Section -->
-    <section id="stats" class="stats section">
+  <!-- Stats Section -->
+<section id="stats" class="stats section">
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
+  <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-        <div class="row gy-4">
+    <div class="row gy-4">
 
-          <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
-            <i class="bi bi-patch-check"></i>
-            <div class="stats-item">
-              <span data-purecounter-start="0" data-purecounter-end="16" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Certifications</p>
-            </div>
-          </div><!-- End Stats Item -->
-
-          <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
-            <i class="bi bi-cpu"></i>
-            <div class="stats-item">
-              <span data-purecounter-start="0" data-purecounter-end="40" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Projects</p>
-            </div>
-          </div><!-- End Stats Item -->
-
-          <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
-            <i class="bi bi-buildings"></i>
-            <div class="stats-item">
-              <span data-purecounter-start="10" data-purecounter-end="1" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Experience (Months)</p>
-            </div>
-          </div><!-- End Stats Item -->
-
-          <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
-            <i class="bi bi-journal-richtext"></i>
-            <div class="stats-item">
-              <span data-purecounter-start="0" data-purecounter-end="61" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Technical Skills</p>
-            </div>
-          </div><!-- End Stats Item -->
-
+      <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
+        <i class="bi bi-patch-check"></i>
+        <div class="stats-item">
+          <span data-purecounter-start="0" data-purecounter-end="16" data-purecounter-duration="1" class="purecounter"></span>
+          <p>Certifications</p>
         </div>
+      </div><!-- End Stats Item -->
 
-      </div>
+      <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
+        <i class="bi bi-cpu"></i>
+        <div class="stats-item">
+          <span data-purecounter-start="0" data-purecounter-end="40" data-purecounter-duration="1" class="purecounter"></span>
+          <p>Projects</p>
+        </div>
+      </div><!-- End Stats Item -->
 
-    </section><!-- /Stats Section -->
+      <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center experience-item">
+        <i class="bi bi-buildings"></i>
+        <div class="stats-item">
+          <span data-purecounter-start="10" data-purecounter-end="1" data-purecounter-duration="1" class="purecounter"></span>
+          <p>Experience (Months)</p>
+        </div>
+      </div><!-- End Stats Item -->
+
+      <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
+        <i class="bi bi-journal-richtext"></i>
+        <div class="stats-item">
+          <span data-purecounter-start="0" data-purecounter-end="61" data-purecounter-duration="1" class="purecounter"></span>
+          <p>Technical Skills</p>
+        </div>
+      </div><!-- End Stats Item -->
+
+    </div>
+
+  </div>
+
+</section><!-- /Stats Section -->
 
     <!-- Skills Section -->
     <section id="skills" class="skills section">
