--- a/index.html
+++ b/index.html
@@ -89,50 +89,52 @@
     </section>
     <!---Hero Section-end--->
 
-    <!-- About Section -->
-    <section id="about" class="about section">
+   <!-- About Section -->
+<section id="about" class="about section">
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>About me</h2>
+  <!-- Section Title -->
+  <div class="container section-title" data-aos="fade-up">
+    <h2>About me</h2>
+  </div>
+  <!-- End Section Title -->
+  <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+    <div class="row gy-4 justify-content-center">
+      <div class="col-lg-4">
+        <img src="/assets/img/Raj.webp" class="img-fluid" alt="" loading="lazy">
       </div>
-      <!-- End Section Title -->
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-        <div class="row gy-4 justify-content-center">
-          <div class="col-lg-4">
-            <img src="/assets/img/Raj.webp" class="img-fluid" alt="" loading="lazy">
+      <div class="col-lg-8 content">
+        <h2>Computer Science &amp; Engineering Student</h2>
+        <p class="fst-italic py-3">
+          As a passionate Computer Science Engineering student, I strive to bridge the gap between innovative ideas and 
+          transformative technologies. I focus on crafting solutions that redefine possibilities.
+        </p>
+        <div class="row">
+          <div class="col-lg-6">
+            <ul>
+              <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>6th Oct 2005</span></li>
+              <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://krajtilak.vercel.app/</span></li>
+              <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>rajtilak1062020@gmail.com</span></li>
+              <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Cuttack</span></li>
+            </ul>
           </div>
-          <div class="col-lg-8 content">
-            <h2>Computer Science &amp; Engineering Student</h2>
-            <p class="fst-italic py-3">
-              As a passionate Computer Science Engineering student, I strive to bridge the gap between innovative ideas and 
-              transformative technologies. I focus on crafting solutions that redefine possibilities.
-            </p>
-            <div class="row">
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>6th Oct 2005</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://krajtilak.vercel.app/</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>rajtilak1062020@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Cuttack</span></li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>19</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Diploma</span></li>
-                </ul>
-              </div>
-            </div>
-            <p class="py-3">
-              "Computers are incredibly fast, accurate, and stupid; humans are incredibly slow, inaccurate, and brilliant;
-               together they are powerful beyond imagination." — Albert Einstein
-            </p>
+          <div class="col-lg-6">
+            <ul>
+              <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>19</span></li>
+              <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Diploma</span></li>
+            </ul>
           </div>
         </div>
+        <p class="py-3">
+          "Computers are incredibly fast, accurate, and stupid; humans are incredibly slow, inaccurate, and brilliant;
+           together they are powerful beyond imagination." — Albert Einstein
+        </p>
+        <a href="https://drive.google.com/file/d/1S5rTR2MIT-CCaEkv8pt9ROsAHOYshzJ_/view?usp=drive_link" class="btn-download-cv" target="_blank">Download My CV</a>
       </div>
-    </section><!-- /About Section -->
+    </div>
+  </div>
+</section><!-- /About Section -->
+
 
   <!-- Stats Section -->
 <section id="stats" class="stats section">
@@ -463,14 +465,13 @@
           </div><!-- End Portfolio Container -->
           <div class="text-center" id="blog">
               <a href="https://krajtilak-portfolio-gallery.vercel.app/" class="btn btn-primary mt-4">
-                <i class="bi bi-cpu"></i> Click Here To View All Of My Projects
+                <i class="bi bi-cpu"></i> View All Projects
               </a>
             </div>
         </div>
       </div>
     </section><!-- /Portfolio Section -->
 
-    
     <section id="blog" class="blog section">
       <div class="container text-center">
         <div class="container section-title" data-aos="fade-up">
