Refactor HTML structure for improved readability and consistency in section comments

--- a/index.html
+++ b/index.html
@@ -65,9 +65,7 @@
   <main class="main">
     <!-- Hero Section -->
     <section id="hero" class="hero section light-background">
-
       <img src="/assets/img/about.webp" alt="Author" loading="lazy">
-
       <div class="container" data-aos="zoom-out">
         <div class="row justify-content-center">
           <div class="col-lg-9">
@@ -90,15 +88,11 @@
     <!---Hero Section-end--->
 
    <!-- About Section -->
-<section id="about" class="about section">
-
-  <!-- Section Title -->
+<section id="about" class="about section"><!-- Section Title -->
   <div class="container section-title" data-aos="fade-up">
     <h2>About me</h2>
   </div>
-  <!-- End Section Title -->
   <div class="container" data-aos="fade-up" data-aos-delay="100">
-
     <div class="row gy-4 justify-content-center">
       <div class="col-lg-4">
         <img src="/assets/img/Raj.webp" class="img-fluid" alt="" loading="lazy">
@@ -188,7 +182,7 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>Skills</h2>
         <p></p>
-      </div><!-- End Section Title -->
+      </div>
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
@@ -336,7 +330,7 @@
 
       </div>
 
-    </section><!-- /Resume Section -->
+    </section><!--End Resume Section -->
 
     <!-- Portfolio Section -->
     <section id="portfolio" class="portfolio section">
@@ -348,7 +342,7 @@
            From cutting-edge robotics and IoT solutions to innovative Webpages, each project reflects my commitment to quality
             and problem-solving. These projects highlight my technical expertise and my ability to turn complex ideas into functional,
              impactful solutions.</p>
-      </div><!-- End Section Title -->
+      </div>
 
       <div class="container">
 
@@ -644,11 +638,10 @@
           </div><!-- End Service Item -->
         </div>
       </div>
-    </section><!-- /Services Section -->
+    </section><!--End Services Section -->
 
     <!-- Contact Section -->
-    <section id="contact" class="contact section">
-      <!-- Section Title -->
+    <section id="contact" class="contact section"><!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
         <p>Let's connect to innovate and solve real-world problems!</p>
@@ -670,9 +663,8 @@
                   </figure>
               </section>
               </div>
-            </div>
+            </div><!-- End Info Items -->
 
-            <!-- End Info Items -->
           </div>
           
           <div class="col-lg-8">
@@ -701,10 +693,11 @@
           </div><!-- End Contact Form -->
         </div>
       </div>
-    </section><!-- /Contact Section -->
+    </section><!--End Contact Section -->
 
   </main>
 
+  <!-- Preloader Script-->
  <script>
     function scrambleText() {
       const text = document.querySelector('.preloader-glitch-text');
@@ -760,8 +753,9 @@
         </div>
       </div>
     </div>
-  </footer><!-- /Footer -->
-  <!-- Scroll Top -->
+  </footer><!--End Footer -->
+  
+  <!-- Scroll Top Button -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
   <!-- Vendor JS Files -->
   <script src="assets/vendor/email-form/validate.js"></script>
